# Rage

./: AGENTS.md
data/A1_SDK_SC132GS/smartsens_sdk/field_nav_external/: README.md
data/A1_SDK_SC132GS/smartsens_sdk/field_nav_external/board/m1pro/rootfs_overlay/usr/smartsoc/: smartsoc_start.sh
data/A1_SDK_SC132GS/smartsens_sdk/field_nav_external/package/field_nav_demo/: field_nav_demo.mk
data/A1_SDK_SC132GS/smartsens_sdk/field_nav_external/scripts/: build_field_nav.sh  rdk_x5_nav_bridge.py
data/A1_SDK_SC132GS/smartsens_sdk/field_nav_external/src/field_nav_demo/: CMakeLists.txt
data/A1_SDK_SC132GS/smartsens_sdk/field_nav_external/src/field_nav_demo/scripts/: run.sh
data/A1_SDK_SC132GS/smartsens_sdk/field_nav_external/src/field_nav_demo/src/: image_processor.cpp  main.cpp  navline_detector.cpp  osd_overlay.cpp
field_nav_workspace/tools/: audit_labelme_dataset_v2.py  compare_onnx_navroad_v2.py  evaluate_navroad.py  evaluate_navroad_v2.py  prepare_labelme_dataset.py  prepare_labelme_dataset_v2.py  prove_navroad_host.py  train_navroad.py  train_navroad_v2.py
